<resources>
    <string name="app_name">MoodPod</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_add">Add</string>
    <string name="title_message">Message</string>
    <string name="title_mood">Mood</string>
    <string name="title_more">More</string>

    <string name="feel_title">How do you feel?</string>
    <string name="time">Time</string>
    <string name="time_detail">%1$02d:%2$02d</string>
    <string name="date">Date</string>
    <string name="message_title">What\'s your story?</string>
    <string name="message_helper">%d/120 characters</string>
    <string name="affirmation_today">Affirmation Today!</string>
    <string name="loading">loading</string>
    <string name="quote">"%s"</string>
    <string name="history_range">%s - %s</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras commodo ut risus sit amet lobortis.</string>

    <string name="tab_love">Love</string>
    <string name="tab_funny">Funny</string>
    <string name="tab_surprised">Surprised</string>
    <string name="tab_angry">Angry</string>
    <string name="tab_tired">Tired</string>
    <string name="tab_crazy">Crazy</string>
    <string name="relationship">Relationship</string>
    <string name="activity">Activity</string>
    <string-array name="tab_other_mood">
        <item>@string/tab_love</item>
        <item>@string/tab_funny</item>
        <item>@string/tab_surprised</item>
        <item>@string/tab_angry</item>
        <item>@string/tab_tired</item>
        <item>@string/tab_crazy</item>
    </string-array>
</resources>