<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.natashaval.moodpod.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_mood"
            app:destination="@id/navigation_mood"
            app:enterAnim="@anim/slide_up" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.natashaval.moodpod.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_mood2"
            app:destination="@id/navigation_mood"
            app:enterAnim="@anim/slide_up" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mood"
        android:name="com.natashaval.moodpod.ui.mood.MoodFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/fragment_mood" >
        <action
            android:id="@+id/action_navigation_mood_to_messageFragment"
            app:destination="@id/messageFragment"
            app:enterAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.natashaval.moodpod.ui.mood.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" >
        <action
            android:id="@+id/action_messageFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"
            app:exitAnim="@anim/slide_down" />
    </fragment>
</navigation>